--- a/google/distributed_code_jam/distributed_code_jam.vcxproj
+++ b/google/distributed_code_jam/distributed_code_jam.vcxproj
@@ -134,16 +134,22 @@
     <ClInclude Include="2018\practice\baby_blocks.h" />
     <ClInclude Include="2018\practice\flagpoles.h" />
     <ClInclude Include="2018\practice\lemming.h" />
+    <ClInclude Include="2018\practice\number_bases.h" />
     <ClInclude Include="2018\practice\pancakes.h" />
+    <ClInclude Include="2018\practice\weird_editor.h" />
     <ClInclude Include="2018\r1\stones.h" />
+    <ClInclude Include="2018\r1\towels.h" />
     <ClInclude Include="message.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="2018\practice\baby_blocks.cpp" />
     <ClCompile Include="2018\practice\flagpoles.cpp" />
     <ClCompile Include="2018\practice\lemming.cpp" />
+    <ClCompile Include="2018\practice\number_bases.cpp" />
     <ClCompile Include="2018\practice\pancakes.cpp" />
+    <ClCompile Include="2018\practice\weird_editor.cpp" />
     <ClCompile Include="2018\r1\stones.cpp" />
+    <ClCompile Include="2018\r1\towels.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="message_fake.cpp" />
   </ItemGroup>
