--- a/google/distributed_code_jam/distributed_code_jam.vcxproj.filters
+++ b/google/distributed_code_jam/distributed_code_jam.vcxproj.filters
@@ -42,6 +42,15 @@
     <ClInclude Include="2018\practice\lemming.h">
       <Filter>Source Files\2018\practice</Filter>
     </ClInclude>
+    <ClInclude Include="2018\practice\number_bases.h">
+      <Filter>Source Files\2018\practice</Filter>
+    </ClInclude>
+    <ClInclude Include="2018\practice\weird_editor.h">
+      <Filter>Source Files\2018\practice</Filter>
+    </ClInclude>
+    <ClInclude Include="2018\r1\towels.h">
+      <Filter>Source Files\2018\r1</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -64,6 +73,15 @@
     </ClCompile>
     <ClCompile Include="2018\practice\lemming.cpp">
       <Filter>Source Files\2018\practice</Filter>
+    </ClCompile>
+    <ClCompile Include="2018\practice\number_bases.cpp">
+      <Filter>Source Files\2018\practice</Filter>
+    </ClCompile>
+    <ClCompile Include="2018\practice\weird_editor.cpp">
+      <Filter>Source Files\2018\practice</Filter>
+    </ClCompile>
+    <ClCompile Include="2018\r1\towels.cpp">
+      <Filter>Source Files\2018\r1</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
